Exercise 1.09: ping-pong/manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong
  namespace: logoutput
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong
  template:
    metadata:
      labels:
        app: pong
    spec:
      containers:
      - name: logoutput
        image: astranero/pong:v.03
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
