Exercise 1.09: ping-pong/manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pong-svc
  namespace: logoutput
spec:
  selector:
    app:  pong
  type:  ClusterIP
  ports:
  - port: 8080
    targetPort:  8080
